# hello-world

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Vagrantfile  docker-compose.yml
src/: main.rs
