[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive", "env"] }
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.14", features = ["full"] }
log = "0.4.27"
pki-types = { package = "rustls-pki-types", version = "1.12.0" }
pretty_env_logger = "0.5.0"
rustls = { version = "0.23.27", default-features = false, features = ["std"] }
rustls-pemfile = "2.2.0"
rustls-post-quantum = "0.2.2"
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26.2"
tcmalloc = "0.3.0"
get_if_addrs = "0.5.3"

[profile.release]
debug = false
opt-level = 3
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = false

[profile.dev]
opt-level = 1
